# blinkControl

./: CMakeLists.txt  README.md  blinkControl.glade  example  todo
src/: Event.hpp  FileReader.cpp  FileReader.hpp  GTK.cpp  GTK.hpp  IFTTT.cpp  IFTTT.hpp  Pattern.cpp  Pattern.hpp  PatternMaker.cpp  PatternMaker.hpp  PatternPart.hpp  Row.cpp  Row.hpp  TrayIcon.cpp  TrayIcon.hpp  main.cpp  main.hpp
